--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <div
-            class="card-heart d-flex justify-content-start symbols"
+            class="d-flex justify-content-start symbols"
             id="upperIcon"
           ></div>
           <i class="numbers d-flex justify-content-center" id="numbers"></i>
@@ -27,6 +27,12 @@
           ></div>
         </div>
       </div>
+    </div>
+
+    <div class="container-fluid d-flex justify-content-center m-2">
+      <button type="button" class="btn btn-secondary" id="buttonCardChanger">
+        Change Card
+      </button>
     </div>
 
     <script src="index.js"></script>
